# SE577-SoftwareArchitecture

./: FinalRelease.MD  ProjectStub.md  README.md  Release1.md  Release2.md  Release3.md  Release4.md  build.sh  package.json  run.sh
Docker/: Dockerfile
backend/: Cargo.toml  Dockerfile
backend/resources/: repositories.yaml
backend/src/: main.rs
frontend/: package-lock.json
frontend/src/components/Props/: PropsChild.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/AppPages/: GistPage.vue  Home.vue  ProfilePage.vue  RepositoryPage.vue
frontend/src/router/: routes.ts
src/components/Props/: PropsChild.vue
src/layouts/: MainLayout.vue
src/pages/AppPages/: GistPage.vue  Home.vue  ProfilePage.vue  RepositoryPage.vue
src/router/: routes.ts
