[package]
name = "/Architecture-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.4" }
tower-http = { version = "0.3.0", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
